# chan.py

./: .gitignore  AGENT.md  AGENTS.md  Chan.py  cli.py  cli_args.py  main.py  pyproject.toml
App/: analysis_export.py  analysis_summary.py  cache_cli.py  etf_store.py  portfolio_analysis.py  portfolio_store.py
Common/: CEnum.py
DataAPI/: BaoStockAPI.py  CacheAPI.py  CacheStore.py  EastMoneyAPI.py  SinaAPI.py  Symbol.py  YahooFinanceAPI.py
Plot/: PlotDriver.py  PlotlyDriver.py  __init__.py
docs/: cli.md  industry_etf_tracking_pool.md  industry_tracking_pool.md
docs/superpowers/plans/: 2026-06-21-cli-arguments.md  2026-06-21-offline-cache.md  2026-06-21-sina-minute-data.md  2026-06-21-uv-packaging.md  2026-06-23-portfolio-tracking.md  2026-06-30-etf-tracking.md
docs/superpowers/specs/: 2026-06-21-cli-arguments-design.md  2026-06-21-offline-cache-design.md  2026-06-21-sina-minute-data-design.md  2026-06-21-uv-packaging-design.md  2026-06-22-analysis-terminal-summary-design.md  2026-06-23-portfolio-tracking-design.md  2026-06-30-etf-tracking-design.md
tests/: test_analysis_export.py  test_analysis_summary.py  test_baostock_api.py  test_cache_api.py  test_cache_cli.py  test_cache_store.py  test_chan_begin_time.py  test_cli.py  test_eastmoney_api.py  test_editable_install.py  test_etf_store.py  test_plot_saving.py  test_plotly_html.py  test_portfolio_analysis.py  test_portfolio_store.py  test_sina_api.py  test_unified_cli.py  test_yahoo_finance_api.py
