[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chanpy"
version = "0.1.0"
description = "Chan theory analysis library"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "baostock>=0.8.8",
  "ipython>=8.5.0",
  "matplotlib>=3.5.3",
  "numpy>=1.23.3",
  "pandas>=1.4.2",
  "requests>=2.22.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
include = [
  "/App",
  "/Bi",
  "/BuySellPoint",
  "/ChanModel",
  "/Combiner",
  "/Common",
  "/DataAPI",
  "/KLine",
  "/Math",
  "/Plot",
  "/Seg",
  "/ZS",
  "/Chan.py",
  "/ChanConfig.py",
]
